--- a/main.css
+++ b/main.css
@@ -5,3 +5,21 @@ body {
 /* .selector-for-some-widget {
     box-sizing: content-box;
   } */
+
+#welcome{
+    text-align: center;
+    margin: auto;
+    padding: auto;
+}
+
+#getSortedForm {
+    text-align: center;
+    margin: auto;
+    padding: auto;
+}
+
+#studentCard {
+    text-align: center;
+    margin: auto;
+    padding: auto;
+}
