--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
     background-color: darkslateblue;
+    font-family: 'Gloria Hallelujah', cursive;
 }
 
 /* .selector-for-some-widget {
@@ -18,7 +19,7 @@ body {
     padding: auto;
 }
 
-#studentCard {
+.card-body {
     text-align: center;
     margin: auto;
     padding: auto;
