finished up some css styling

--- a/main.css
+++ b/main.css
@@ -19,8 +19,11 @@ body {
     padding: auto;
 }
 
-.card-body {
-    text-align: center;
+#studentCard {
+    box-sizing: content-box;
     margin: auto;
     padding: auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    text-align: center;
+    font-size: 16px;
 }
